--- a/src/Pages/Search/Search.css
+++ b/src/Pages/Search/Search.css
@@ -59,15 +59,14 @@ textarea:focus {
         margin-top: 1.2rem;
     }
 
-    #find,
     #find::placeholder {
         padding: 0.6rem;
     }
 
     #find {
-        background-position: 15px 13px;
+        background-position: 15px 7px;
         background-size: 20px 20px;
-        padding: 0.9rem;
+        padding: 0.6rem;
         padding-left: 40px;
         font-size: 1rem;
     }
